<resources>
    <string name="app_name">SupplierApp</string>
    <string name="adresse_mail">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="NomFournisseur">Nom</string>
    <string name="PrenomFournisseur">Prénom</string>
    <string name="MotDePasseConfirme">Confirmez votre mot de passe</string>
    <string name="title_activity_home_app_navigation_drawer">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_add">Ajouter une commande</string>
    <string name="menu_parametre_compte">Paramètres du compte</string>
    <string name="menu_aide_commentaires">Aide et commentaires</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="Commande">Commande</string>
    <string name="TypeProduit">Type de produit</string>
    <string name="DateLivraison">Date de livraison</string>
    <string name="Client">Adresse de livraison</string>
    <string name="Consigne">Consignes</string>

    <string name="Rechercher">Rechercher</string>

    <!--Page d'accueil-->
</resources>