<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
      <!--  <item
            android:id="@+id/nav_ajout_commande"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_add" />-->
        <item
            android:id="@+id/nav_paramtres_compte"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_parametre_compte" />
        <item
            android:id="@+id/nav_aide_commentaires"
            android:icon="@drawable/ic_menu_help_outline"
            android:title="@string/menu_aide_commentaires" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>