<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:gravity="center_horizontal"
    tools:context=".CommandeInstance">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        />
    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/Commande"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:hint="@string/Commande"
        android:backgroundTint="@color/darkGreen"
        />
    <TextView
        android:id="@+id/TypeProduit"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:hint="@string/TypeProduit"
        android:backgroundTint="@color/darkGreen"
        />
    <TextView
        android:id="@+id/DateLivraison"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:hint="@string/DateLivraison"
        android:backgroundTint="@color/darkGreen"
        />
    <TextView
        android:id="@+id/Client"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:hint="@string/Client"
        android:backgroundTint="@color/darkGreen"
        />
    <TextView
        android:id="@+id/Consigne"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:hint="@string/Consigne"
        android:backgroundTint="@color/darkGreen"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/ModifierCommande"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Modifier"
            android:backgroundTint="@color/darkGreen"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/SupprimerCommande"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Supprimer"
            android:backgroundTint="@color/darkGreen"
            android:layout_marginTop="10dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>